css/style.comp.css
:root {
  --color-primary: #0f97e1;
  --color-primary-light: #32adf1;
  --color-primary-dark: #0a6191;
  --color-grey-light-1: #faf9f9;
  --color-grey-light-2: #f4f2f2;
  --color-grey-light-3: #f0eeee;
  --color-grey-light-4: #eee;
  --color-grey-light-5: #ccc;
  --color-grey-dark-1: #999;
  --color-grey-dark-2: #777;
  --color-grey-dark-3: #555;
  --color-grey-dark-4: #333;
  --color-grey-dark-5: #252525;
  --color-grey-dark-6: #0a0e10;
  --color-invalid: #cc3838;
  --shadow-dark: 0 2 6 rgba(0,0,0,.3);
  --shadow-light: 0 2 6 rgba(0,0,0,.06);
  --line: 1px solid var(--color-grey-light-3); }

.header {
  height: 100vh;
  width: 100%;
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.404), rgba(20, 91, 158, 0.822)), url(../img/bg-main.jpg);
  background-position: center;
  background-size: cover;
  position: relative; }
  @media only screen and (max-width: 68.75em) {
    .header {
      background-position: right; } }
  @media only screen and (max-width: 56.25em) {
    .header {
      height: 70vh; } }

.nav {
  background-color: var(--color-grey-light-1);
  color: var(--color-grey-dark-5);
  z-index: 99;
  padding: 0 2rem; }
  .nav__container {
    max-width: 120rem;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.8rem;
    padding: 1.5rem 0; }
    @media only screen and (max-width: 40.625em) {
      .nav__container {
        flex-direction: column; } }
  .nav__logo {
    font-weight: 500;
    font-size: 2.2rem;
    text-transform: uppercase;
    line-height: 1.4;
    padding: 1rem;
    border: 2px solid var(--color-grey-dark-5);
    border-radius: 3px; }
    @media only screen and (max-width: 40.625em) {
      .nav__logo {
        line-height: 1;
        padding: .5rem; } }
    @media only screen and (max-width: 24.375em) {
      .nav__logo {
        font-size: 2rem; } }
    .nav__logo-icon {
      height: 2.2rem;
      width: 2.2rem;
      margin-right: .7rem;
      transform: translateY(3px); }
  .nav__list {
    list-style: none;
    display: flex; }
    @media only screen and (max-width: 40.625em) {
      .nav__list {
        width: 100%;
        justify-content: space-evenly;
        margin-top: 2rem; } }
    @media only screen and (max-width: 26.25em) {
      .nav__list {
        margin-top: 3rem; } }
  .nav__item {
    margin-left: 3rem; }
    @media only screen and (max-width: 40.625em) {
      .nav__item {
        margin-left: 0; } }
  .nav__link, .nav__link:link, .nav__link:visited {
    padding-bottom: .8rem;
    border-bottom: 2px solid transparent;
    transition: all .3s; }
  .nav__link:hover, .nav__link:active {
    border-bottom: 2px solid var(--color-primary); }

.banner {
  position: absolute;
  top: 54%;
  left: 0;
  transform: translateY(-50%);
  color: var(--color-grey-light-2);
  width: 100%;
  padding: 0 2rem; }
  @media only screen and (max-width: 26.25em) {
    .banner {
      position: static;
      transform: translateY(0);
      padding: 0; } }
  .banner__container {
    max-width: 120rem;
    margin: 0 auto; }
  .banner__box {
    padding: 3rem;
    background-color: rgba(0, 0, 0, 0.6);
    width: 70%;
    display: flex;
    flex-direction: column; }
    @media only screen and (max-width: 56.25em) {
      .banner__box {
        width: 100%;
        padding: 6rem 2rem; } }
  .banner__main {
    font-size: 3rem;
    text-transform: uppercase; }
  .banner__paragraph {
    font-size: 1.6rem;
    color: var(--color-grey-light-5); }
  .banner__btn--primary {
    margin-right: 3rem;
    font-weight: 500; }
    @media only screen and (max-width: 40.625em) {
      .banner__btn--primary {
        margin-right: 1rem; } }
    @media only screen and (max-width: 26.25em) {
      .banner__btn--primary {
        margin-right: 0;
        margin-bottom: 2rem; } }
  @media only screen and (max-width: 26.25em) {
    .banner__btn {
      display: flex;
      flex-direction: column;
      text-align: center; } }

.services {
  padding: 7rem 2rem;
  background-image: url(../img/bg-services.jpg);
  background-position: center;
  background-size: cover;
  text-align: center; }
  @media only screen and (max-width: 40.625em) {
    .services {
      padding: 4rem 2rem; } }
  .services__container {
    max-width: 120rem;
    margin: 0 auto;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap; }
  .services__box {
    flex-basis: 23%;
    background-color: rgba(255, 255, 255, 0.5);
    padding: 3rem 1rem;
    color: var(--color-grey-dark-5);
    text-align: center;
    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
    border-radius: 3px;
    transition: transform .2s;
    cursor: pointer;
    backface-visibility: hidden;
    margin: 1rem; }
    @media only screen and (max-width: 45.625em) {
      .services__box {
        flex-basis: 45%; } }
    @media only screen and (max-width: 40.625em) {
      .services__box {
        padding: 1rem;
        flex-basis: 65%; } }
    @media only screen and (max-width: 26.25em) {
      .services__box {
        padding: 1rem;
        flex-basis: 80%; } }
    .services__box-icon {
      fill: var(--color-primary);
      height: 8rem;
      width: 8rem; }
    .services__box-text {
      font-size: 1.6rem;
      font-weight: 400; }
  .services__box:hover {
    transform: translateY(-1.5rem) scale(1.05);
    backface-visibility: hidden; }

.growsales {
  height: 40rem;
  width: 100%;
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/bg-growsales-2.jpg);
  background-size: cover;
  color: var(--color-grey-light-2);
  position: relative;
  padding: 0 2rem; }
  @media only screen and (max-width: 68.75em) {
    .growsales {
      background-position: right; } }
  .growsales__container {
    max-width: 120rem;
    margin: 0 auto; }
  .growsales__text {
    width: 45%;
    position: absolute;
    top: 50%;
    transform: translateY(-50%); }
/* ... */

